Added Work Flow

--- a/final_report.ipynb
+++ b/final_report.ipynb
@@ -33,6 +33,27 @@
    "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11e0d38f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### Steps\n",
+    "\n",
+    "# 1. Read the data(Beni)\n",
+    "# 2. Preprocess/Clean the data()\n",
+    "# 3. Detrend (Chutian)\n",
+    "# 4. Split the data into training and testing(Chutian)\n",
+    "# 5. Train the models (All)\n",
+    "# 6. Compare Models\n",
+    "# 7. Add AMIRA (Beni)\n",
+    "# 8. Predict the future (All)\n",
+    "# 9. Make it all run nicely (Beni)\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "897fdae3-d311-45fe-8282-6dd2313dea4c",
    "metadata": {},
