--- a/final_report.ipynb
+++ b/final_report.ipynb
@@ -41,7 +41,7 @@
    "source": [
     "#### Steps\n",
     "\n",
-    "# 1. Read the data(Beni)\n",
+    "# 1. Read the data(Ben)\n",
     "# 2. Preprocess/Clean the data()\n",
     "# 3. Detrend (Chutian)\n",
     "# 4. Split the data into training and testing(Chutian)\n",
