Added KNR based on weather features

--- a/final_report/final_report.ipynb
+++ b/final_report/final_report.ipynb
@@ -143,7 +143,8 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression \n",
     "from sklearn.metrics import mean_squared_error\n",
-    "from sklearn.neighbors import KNeighborsRegressor"
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
@@ -188,6 +189,14 @@
    "metadata": {},
    "source": [
     "### Basic KNN Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "802d9b72-a68e-49fd-ad7b-e79ea2c74476",
+   "metadata": {},
+   "source": [
+    "#### KNR on dates"
    ]
   },
   {
@@ -350,6 +359,247 @@
     "\n",
     "print('Training RMSE:', RMSE_train)\n",
     "print('Test RMSE:', RMSE_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9418137f-6729-4623-ac5c-0e63ca37421a",
+   "metadata": {},
+   "source": [
+    "### KNR on weather features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37066786-de4e-405d-ad34-ebaa9fb3933e",
+   "metadata": {},
+   "source": [
+    "#### A model comparison function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32a63236-54da-4feb-9772-bf1645ef1dc8",
+   "metadata": {},
+   "source": [
+    " The following function compares different modeling approaches\n",
+    "\n",
+    "- The ``model`` argument takes a model object, e.g., LinearRegression, KNR\n",
+    "- The variable ``X_train`` depends on how we select the features \n",
+    "- The variable ``y_train`` depends on how we detrend the data\n",
+    "- ``n`` is the number of cross-validations\n",
+    "\n",
+    "The function returns the average root MSE over the validation sets, predicted values, and the residues."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06a24da5-f000-4fe2-8730-88f7422ed66c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test(model, X_train, y_train, n):\n",
+    "    \n",
+    "    kfold = KFold(n_splits = n, shuffle = True, random_state = 50)\n",
+    "    total_rmse = 0\n",
+    "    \n",
+    "    for train_index, test_index in kfold.split(X_train):\n",
+    "    \n",
+    "        X_tt = X_train.iloc[train_index]\n",
+    "        y_tt = y_train.iloc[train_index]\n",
+    "    \n",
+    "        X_val = X_train.iloc[test_index]\n",
+    "        y_val = y_train.iloc[test_index]\n",
+    "    \n",
+    "        ## Fit the model\n",
+    "        model.fit(X_tt,y_tt)\n",
+    "\n",
+    "        # Make the prediction\n",
+    "        \n",
+    "        y_pred = model.predict(X_val)\n",
+    "        rmse = np.sqrt(mean_squared_error(y_val, y_pred))\n",
+    "\n",
+    "        total_rmse += rmse\n",
+    "\n",
+    "    predict_values = model.predict(X_train)\n",
+    "    residues = y_train - model.predict(X_train)\n",
+    "    \n",
+    "    return total_rmse/n, model.predict(X_train), residues"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c15d263-431a-49fb-a3a0-c2348e2da328",
+   "metadata": {},
+   "source": [
+    "#### A list of KNR models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "acdab841-582b-42cb-a5d3-54e7360671be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "knr_euc = [KNeighborsRegressor(i, metric='euclidean') for i in list(range(2, 50))]\n",
+    "knr_man = [KNeighborsRegressor(i, metric='manhattan') for i in list(range(2, 50))]\n",
+    "\n",
+    "knr_models = knr_euc + knr_man"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e45fe8fc-2553-4fda-b6e9-07dd78141799",
+   "metadata": {},
+   "source": [
+    "#### Defining ``X_train`` and ``y_train``"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "734adb53-5bcc-4ba5-83bb-dc9b531acfa2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = ['day_length', 'mean_dep_temp', 'total_precip']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6884a305-85e4-40ea-a28c-c4c8c3e72eb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = bike_train[features].copy()\n",
+    "\n",
+    "# Scale the data\n",
+    "scaler = StandardScaler().set_output(transform='pandas')\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "\n",
+    "# The y_train values corresponding to different detrending methods\n",
+    "y_train = bike_train['adj_num_trips']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b85c7b2-06ba-4ca0-9986-8f4f8185cc95",
+   "metadata": {},
+   "source": [
+    "#### Model comparison"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0bb16474-edfe-411b-8c49-f0ef309d7582",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "\n",
+    "rmses = [test(model, X_train_scaled, y_train, 5)[0] for model in knr_models]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76ae5b98-59a8-48ce-a1e9-6ccda5b4ca73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rmse_table = pd.DataFrame(rmses, columns=['rmse'])\n",
+    "\n",
+    "rmse_table.index = [f'model_{i+1}' for i in range(len(rmses))] \n",
+    "\n",
+    "# Finding the minimum rmse and its index\n",
+    "min_value = rmse_table.min().min()\n",
+    "min_index = rmse_table.stack().idxmin()\n",
+    "\n",
+    "print(f'The model with the least average root MSE is {min_index[0]}. Its average RMSE is {min_value:.4f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d54e686-ef80-4c82-b02f-6c954a74b4c7",
+   "metadata": {},
+   "source": [
+    "#### Plotting the predicted values and the residues of the candidate model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b453eaf1-067b-4701-b563-7d9e1999c68d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nice_model = knr_models[87]\n",
+    "print(nice_model)\n",
+    "\n",
+    "model_data = test(nice_model, X_train_scaled, y_train, 5)\n",
+    "\n",
+    "# Plotting the predicated data\n",
+    "plt.figure(figsize=(15, 5))\n",
+    "plt.scatter(X_train_scaled.index, y_train, label='Actual', color = 'blue', alpha = 0.3)\n",
+    "plt.scatter(X_train_scaled.index, model_data[1], label='Predicted', color='red', alpha = 0.3)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "857fd53c-1259-4b45-82ea-7ad4d7612238",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plotting the residues\n",
+    "plt.figure(figsize=(15, 5))\n",
+    "plt.scatter(model_data[1], model_data[2], alpha = 0.37)\n",
+    "plt.xlabel('Predicted values')\n",
+    "plt.ylabel('Residues')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54d45866-ab92-408a-a46e-7d6bf7d7adfe",
+   "metadata": {},
+   "source": [
+    "#### Performance on test data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23e489da-4bbe-472e-ac6b-f41e817b87a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test = bike_test[features].copy()\n",
+    "X_test_scaled = scaler.fit_transform(X_test)\n",
+    "\n",
+    "pred_val = nice_model.predict(X_test_scaled) * bike_test['trend_val']\n",
+    "\n",
+    "plt.figure(figsize=(15, 5))\n",
+    "plt.scatter(X_test.index, bike_test['num_trips'], label='Actual', color = 'blue')\n",
+    "plt.scatter(X_test.index, pred_val, label='Predicted', color='red')\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9b17d7c-4f4c-4520-8769-35d96cf1009b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the root mean square error\n",
+    "np.sqrt(mean_squared_error(pred_val,bike_test['num_trips']))"
    ]
   },
   {
@@ -648,7 +898,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
