Added summary of data and description of bike data download to final report

--- a/final_report/final_report.ipynb
+++ b/final_report/final_report.ipynb
@@ -9,12 +9,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a364fe8f-6c40-41c7-bfbc-1a766f6db2f2",
+   "cell_type": "markdown",
+   "id": "a3133a73-3869-474d-a537-e2df4b3fb406",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Many cities have bicycle-sharing systems, or “bikeshares,” where individuals can check out bicycles for a short period of time before returning them to a docking station. Our goal is to quantify the impact of weather and climate on bikeshare usage in Vancouver, British Columbia."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -25,12 +25,41 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "50575d3b-310c-4bba-9b45-260551708cf9",
+   "cell_type": "markdown",
+   "id": "be252907-cbbc-4a8a-a600-09388f870120",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "1. Vancouver Bike Share, Inc., “Mobi”: Data concerning bike ridership between 2017 and 2024. The relevant data provided by Mobi includes, for each bike ride, the\n",
+    "  * Departure and return times (precision to the hour’s ‘floor’),\n",
+    "  * Distance of the ride (m),\n",
+    "  * Duration of the ride (sec),\n",
+    "  * Departure and return temperatures (in degrees C),\n",
+    "  * Whether or not the ride was on an electric bike (“e-bike”)\n",
+    "\n",
+    "2. Environmental and Climate Change Canada (ECCC) database, the Government of Canada: Historical weather data from this time window, measured at the weather station at Vancouver International Airport, which takes more weather measurements than other weather stations in the Vancouver area. The measurements included in each observation from the data we examine\n",
+    "  * The date and hour,\n",
+    "  * Temperature (degrees C),\n",
+    "  * Dew point temperature (degrees C),\n",
+    "  * Relative humidity percentage, which is the percentage of water vapor in the air present relative to the maximum amount possible,\n",
+    "  * The direction of the maximum wind gust (in tens of degrees, measured from true north), recorded only if this gust exceeds 29 km/hr\n",
+    "  * The wind speed of the maximum wind gust (km/hr), recorded only if exceeding 29 km/hr,\n",
+    "  * Visibility (km),\n",
+    "  * Wind chill temperature (degrees C), an index combining temperature and wind velocity to describe how cold the weather feels to the average person,\n",
+    "  * The atmospheric pressure (in kPa) at the weather station’s elevation,\n",
+    "  * A description of the weather; e.g., “Clear,” “Cloudy,” “Rain”, taken every three hours,\n",
+    "  * Minimum, maximum, and mean temperature of that day (degrees C),\n",
+    "  * Heating degree days (degrees C) of that day, which is the number of degrees the day’s mean temperature is below 18 degrees Celsius,\n",
+    "  * Cooling degrees day (degrees C) of that day, which is the number of degrees the day’s mean temperature is above 18 degrees Celsius,\n",
+    "  * The total rain (mm) in that day,\n",
+    "  * The total snow (cm) in that day,\n",
+    "  * The total precipitation (mm) in that day,\n",
+    "  * The amount of snow on the ground that day (cm),\n",
+    "  * The speed of the maximum gust of wind for that day (km/hr), recorded only if this gust exceeds 31 km/hr\n",
+    "  * For further information on the definition of these weather and climate terms, see [ECCC's Glossary](https://climate.weather.gc.ca/glossary_e.html).\n",
+    "\n",
+    "\n",
+    "3. Timeanddate.com: The amount of sunlight (hours, minutes, seconds) in Vancouver, Canada for each day in our time window.\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -57,13 +86,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "346bb012",
+   "cell_type": "markdown",
+   "id": "5b5d937c-c4b1-4708-97eb-744d66ae4fe5",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "### Data Cleaning ###"
+    "### Downloading and assembling data\n",
+    "\n",
+    "We downloaded monthly bike ridership data from Mobi's [system data](https://www.mobibikes.ca/en/system-data) website using a web scraping script.  While this script automated much of the download process, a small number of files had to be downloaded manually.\n",
+    "\n",
+    "This raw data included a row for each bike trip, with departure and return times rounded to the nearest hour.  We decided to measure bike usage on a daily, rather hourly, scale.  In each monthly data file, we grouped the rows by date to determine the total number rides taken each day.  We then combined all of the data (ranging from January 2017 to April 2024) into an aggregate table.\n",
+    "\n",
+    "The raw bike data, as well as the download script, can be found in the folder `data/bike data/raw data`."
    ]
   },
   {
@@ -3895,7 +3928,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
